--- a/css/style.css
+++ b/css/style.css
@@ -126,12 +126,12 @@ body {
       object-fit: cover;
       padding: 15px;
     }
-    .cards {
+    .cards-container {
       display: flex;
       justify-content: space-around;
       background-color: #6D3E8C;
       width: 100%;
-      padding: 20px;
+      padding: 20px 20px 50px 20px;
     }
     .cards__title {
       text-align: center;
@@ -139,34 +139,23 @@ body {
       background-color: #6D3E8C;
       padding: 40px 0px 15px 0px;
     }
+    .card {
+      width: 25%;
+    }
     .cards__title h3 {
-      font-size: 200%;
+      font-size: 250%;
+      font-weight: bold;
+    }
+    .card-title {
+      font-size: 150%;
       text-align: center;
       font-weight: bold;
-      color: #ffffff;
-    }
-    .card__body {
-      width: 27%;
-      padding: 15px;
-      text-align: center;
-    }
-    .card__body img {
-      width: 90%;
-      padding: 15px;
-      text-align: center;
-      object-fit: cover;
-    }
-    .card__body h4 a {
-      font-size: 120%;
-      text-align: center;
-      font-weight: bold;
-      color: #ffffff;
+      color: #404040;
       text-decoration: none;
       padding: 10px 0px;
     }
-    .card__body p {
+    .card-text {
       text-align: center;
-      color: #ffffff;
     }
 
 /* FOTOGRAFIA.HTML */
@@ -312,6 +301,7 @@ body {
       display: flex;
       flex-wrap: wrap;
       background-color: #909090;
+      padding: 30px 0px;
     }
     .card__imp__body {
       padding: 30px 60px;
@@ -346,6 +336,7 @@ body {
     .card__imp2__body h4 {
       font-size: 400%;
       text-decoration: none;
+      font-weight: bold;
     }
     .card__imp2__title {
       width: 100%;
@@ -353,6 +344,7 @@ body {
     .card__imp2__title h3 {
       margin-top: 100px;
       font-size: 300%;
+      font-weight: bold;
     }
 
 /* CONTACTO.HTML */
@@ -363,59 +355,38 @@ body {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
     }
-    .contacto__principal__form {
-      padding: 20px 80px;
-      width: 100%;
+    .contacto__principal h2 {
+      font-size: 250%;
+      font-weight: bold;
     }
-    .contacto__principal__form fieldset {
-      padding: 20px 40px;
-      height: 100%;
-      border: solid 5px #6D3E8C;
+    .container_form {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-    }
-    .contacto__principal__form fieldset legend {
-      color: #6D3E8C;
-      padding: 20px 0px;
-      font-size: 300%;
-      font-weight: bold;
-      text-align: center;
-    }
-    .Campo {
-      padding: 30px 20px;
-      width: 28%;
-      flex-wrap: wrap;
-      text-align: center;
-    }
-    .Campo label {
       width: 100%;
     }
-    .Campo input {
-      width: 100%;
+    .row {
+      justify-content: center;
     }
-    .Campo_grande {
-      width: 100%;
-      padding: 30px 20px;
-      flex-wrap: wrap;
-      text-align: center;
+    .form-label {
+      padding-top: 20px;
     }
-    .Campo_grande label {
-      width: 100%;
+    .form-check {
+      padding-top: 20px;
     }
-    .Campo_grande input {
-      width: 100%;
-      height: 120px;
-    }
-    fieldset input {
-      width: 30%;
-      height: 50px;
-    }
-    .e {
+    .btn-primary {
+      margin-top: 20px;
       background-color: #6D3E8C;
-      color: #ffffff;
-      font-weight: bold;
+      border: none;
+    }
+    .col-12 {
+      width: 80%;
+    }
+    .col-6 {
+      width: 40%;
+    }
+    .col-3 {
+      width: 20%;
     }
     .contacto__principal__content {
       padding: 65px;
@@ -487,17 +458,20 @@ body {
     }
     .article_historia aside {
       width: 100%;
+      text-align: center;
     }
-    .cards {
+    .cards-container {
       flex-direction: column;
-    }
-    .card__body {
       width: 100%;
       align-items: center;
     }
-    .card__body img {
-      width: 450px;
-      height: 300px;
+    .card {
+      width: 80%;
+      margin: 20px 0px;
+    }
+    .card-img-top {
+      height: 250px;
+      object-fit: cover;
     }
   /* fotografia */
     .fotografia__principal img {
