--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,9 @@ body {
   /* Mobile */
   @media only screen and (max-width: 576px){
     /* esilos generales */
+    main {
+      width: 100%;
+    }
     .menu {
       flex-direction: column;
     }
