--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -50,7 +50,7 @@
         }
         .btn-primary {
           margin-top: 20px;
-          background-color: #6D3E8C;
+          background-color: $main_color;
           border: none;
         }
       }
