--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+/* IMPORTS BASE */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 * {
   margin: 0;
@@ -7,8 +8,35 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #ffffff;
+/* VARS */
+/* IMPORTS COMPONENTS */
+/* FOOTER */
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #404040;
+  padding: 60px;
+}
+footer ul {
+  list-style-type: none;
+  text-align: left;
+  display: inline;
+  padding: 0px;
+}
+footer ul li {
+  color: #909090;
+  margin: 15px;
+  font-weight: bold;
+  display: inline;
+}
+footer ul li a {
+  color: #909090;
+  text-decoration: none;
+}
+footer p {
+  color: #757575;
+  text-align: right;
+  text-decoration: none;
 }
 
 /* MENÚ_NAV */
@@ -40,171 +68,7 @@ header {
   font-size: 120%;
 }
 
-/* FOOTER */
-footer {
-  display: flex;
-  justify-content: space-between;
-  background-color: #404040;
-  padding: 60px;
-}
-footer ul {
-  list-style-type: none;
-  text-align: left;
-  display: inline;
-}
-footer ul li {
-  color: #909090;
-  margin: 15px;
-  font-weight: bold;
-  display: inline;
-}
-footer ul li a {
-  color: #909090;
-  text-decoration: none;
-}
-footer p {
-  color: #757575;
-  text-align: right;
-  text-decoration: none;
-}
-
-/* PARRAFOS */
-p {
-  font-size: 100%;
-}
-
-/* INDEX.HTML */
-/* MAIN_INDEX */
-.article_container {
-  display: flex;
-  width: 100%;
-}
-.article_container .article_container_main {
-  width: 50%;
-  padding: 50px;
-  text-align: center;
-}
-.article_container .article_container_main h1 {
-  font-size: 300%;
-  font-weight: bold;
-  text-align: center;
-  padding-bottom: 20px;
-}
-.article_container .article_container_ph {
-  width: 50%;
-  padding: 50px;
-}
-.article_container .article_container_ph img {
-  width: 100%;
-  height: 354px;
-  object-fit: cover;
-}
-
-.article_historia {
-  display: flex;
-  width: 100%;
-}
-.article_historia .imagenes_h {
-  display: flex;
-  flex-direction: column;
-  width: 60%;
-  padding: 40px;
-}
-.article_historia .imagenes_h img {
-  height: 250px;
-  object-fit: cover;
-  padding: 15px;
-}
-.article_historia .article_historia_content {
-  padding: 40px;
-  width: 40%;
-  text-align: start;
-}
-.article_historia .article_historia_content h2 {
-  font-size: 200%;
-  font-weight: bold;
-  text-align: start;
-}
-
-.cards__title {
-  text-align: center;
-  color: #ffffff;
-  background-color: #6D3E8C;
-  padding: 40px 0px 15px 0px;
-}
-.cards__title h3 {
-  font-size: 250%;
-  font-weight: bold;
-}
-
-.cards-container {
-  display: flex;
-  justify-content: space-around;
-  background-color: #6D3E8C;
-  width: 100%;
-  padding: 20px 20px 50px 20px;
-}
-.cards-container .card {
-  width: 25%;
-}
-.cards-container .card .card-title {
-  font-size: 150%;
-  text-align: center;
-  font-weight: bold;
-  color: #404040;
-  text-decoration: none;
-  padding: 10px 0px;
-}
-.cards-container .card .card-text {
-  text-align: center;
-}
-
-/* FOTOGRAFIA.HTML */
-/* MAIN_FOTOGRAFIA */
-.fotografia__principal {
-  background-color: #ffffff;
-  width: 100%;
-  display: inline-block;
-}
-.fotografia__principal img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-}
-.fotografia__principal .fotografia__content {
-  padding: 60px 50px 0px 50px;
-  width: 100%;
-  vertical-align: top;
-  text-align: center;
-}
-.fotografia__principal .fotografia__content h1 {
-  margin-bottom: 50px;
-  font-size: 400%;
-  font-weight: bold;
-}
-
-.cards__fotografia {
-  display: flex;
-  text-align: center;
-}
-.cards__fotografia .card__fotografia__body {
-  padding: 60px 40px;
-  width: 50%;
-  text-align: center;
-  display: inline-block;
-}
-.cards__fotografia .card__fotografia__body h4 {
-  font-size: 200%;
-  font-weight: bold;
-  padding-bottom: 20px;
-}
-.cards__fotografia .card__fotografia__body img {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-  padding-top: 20px;
-}
-
+/* IMPORTS LAYOUT */
 /* CALCOSYVINILOS.HTML */
 /* MAIN_CALCOSYVINILOS */
 .cyv__principal {
@@ -271,6 +135,127 @@ p {
 .cyv__vinilo .cyv__product__vinilo h4 {
   font-size: 200%;
   font-weight: bold;
+}
+
+/* CONTACTO.HTML */
+/* MAIN_CONTACTO */
+.contacto__principal {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.contacto__principal h1 {
+  width: 100%;
+  font-size: 350%;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 50px;
+}
+.contacto__principal__content {
+  padding: 65px;
+  width: 100%;
+  text-align: center;
+}
+.contacto__principal h2 {
+  font-size: 250%;
+  font-weight: bold;
+}
+.contacto__principal .container_form {
+  display: flex;
+  width: 100%;
+}
+.contacto__principal .container_form .row {
+  justify-content: center;
+  width: 100%;
+}
+.contacto__principal .container_form .row .col-12 {
+  width: 80%;
+}
+.contacto__principal .container_form .row .col-12 .form-label {
+  padding-top: 20px;
+}
+.contacto__principal .container_form .row .col-6 {
+  width: 40%;
+}
+.contacto__principal .container_form .row .col-3 {
+  width: 20%;
+}
+.contacto__principal .container_form .row .form-check {
+  padding-top: 20px;
+}
+.contacto__principal .container_form .row .btn-primary {
+  margin-top: 20px;
+  background-color: #6D3E8C;
+  border: none;
+}
+
+.contacto__sucursal {
+  background-color: #ffffff;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.contacto__sucursal__content {
+  padding: 50px;
+  width: 100%;
+  text-align: center;
+}
+.contacto__sucursal__content h4 {
+  font-size: 250%;
+  font-weight: bold;
+  text-align: center;
+}
+.contacto__sucursal iframe {
+  width: 100%;
+  height: 350px;
+  padding: 0px 50px 100px 50px;
+}
+
+/* FOTOGRAFIA.HTML */
+/* MAIN_FOTOGRAFIA */
+.fotografia__principal {
+  background-color: #ffffff;
+  width: 100%;
+  display: inline-block;
+}
+.fotografia__principal img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+.fotografia__principal .fotografia__content {
+  padding: 60px 50px 0px 50px;
+  width: 100%;
+  vertical-align: top;
+  text-align: center;
+}
+.fotografia__principal .fotografia__content h1 {
+  margin-bottom: 50px;
+  font-size: 400%;
+  font-weight: bold;
+}
+
+.cards__fotografia {
+  display: flex;
+  text-align: center;
+}
+.cards__fotografia .card__fotografia__body {
+  padding: 60px 40px;
+  width: 50%;
+  text-align: center;
+  display: inline-block;
+}
+.cards__fotografia .card__fotografia__body h4 {
+  font-size: 200%;
+  font-weight: bold;
+  padding-bottom: 20px;
+}
+.cards__fotografia .card__fotografia__body img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  padding-top: 20px;
 }
 
 /* IMPRESION.HTML */
@@ -347,83 +332,93 @@ p {
   font-weight: bold;
 }
 
-/* CONTACTO.HTML */
-/* MAIN_CONTACTO */
-.contacto__principal {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.contacto__principal h1 {
-  width: 100%;
-  font-size: 350%;
-  font-weight: bold;
-  text-align: center;
-  padding-top: 50px;
-}
-.contacto__principal .contacto__principal__content {
-  padding: 65px;
-  width: 100%;
-  text-align: center;
-}
-.contacto__principal h2 {
-  font-size: 250%;
-  font-weight: bold;
-}
-.contacto__principal .container_form {
+/* INDEX.HTML */
+/* MAIN_INDEX */
+.article_container {
   display: flex;
   width: 100%;
 }
-.contacto__principal .container_form .row {
-  justify-content: center;
+.article_container_main {
+  width: 50%;
+  padding: 50px;
+  text-align: center;
+}
+.article_container_main h1 {
+  font-size: 300%;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 20px;
+}
+.article_container_ph {
+  width: 50%;
+  padding: 50px;
+}
+.article_container_ph img {
   width: 100%;
-}
-.contacto__principal .container_form .row .col-12 {
-  width: 80%;
-}
-.contacto__principal .container_form .row .col-12 .form-label {
-  padding-top: 20px;
-}
-.contacto__principal .container_form .row .col-6 {
-  width: 40%;
-}
-.contacto__principal .container_form .row .col-3 {
-  width: 20%;
-}
-.contacto__principal .container_form .row .form-check {
-  padding-top: 20px;
-}
-.contacto__principal .container_form .row .btn-primary {
-  margin-top: 20px;
-  background-color: #6D3E8C;
-  border: none;
+  height: 354px;
+  object-fit: cover;
 }
 
-.contacto__sucursal {
-  background-color: #ffffff;
+.article_historia {
+  display: flex;
   width: 100%;
+}
+.article_historia .imagenes_h {
   display: flex;
   flex-direction: column;
+  width: 60%;
+  padding: 40px;
 }
-.contacto__sucursal .contacto__sucursal__content {
-  padding: 50px;
-  width: 100%;
-  text-align: center;
+.article_historia .imagenes_h img {
+  height: 250px;
+  object-fit: cover;
+  padding: 15px;
 }
-.contacto__sucursal .contacto__sucursal__content h4 {
-  font-size: 250%;
+.article_historia_content {
+  padding: 40px;
+  width: 40%;
+  text-align: start;
+}
+.article_historia_content h2 {
+  font-size: 200%;
   font-weight: bold;
   text-align: center;
 }
-.contacto__sucursal iframe {
+
+.cards__title {
+  text-align: center;
+  color: #ffffff;
+  background-color: #6D3E8C;
+  padding: 40px 0px 15px 0px;
+}
+.cards__title h3 {
+  font-size: 250%;
+  font-weight: bold;
+}
+
+.cards-container {
+  display: flex;
+  justify-content: space-around;
+  background-color: #6D3E8C;
   width: 100%;
-  height: 350px;
-  padding: 0px 50px 100px 50px;
+  padding: 20px 20px 50px 20px;
+}
+.cards-container .card {
+  width: 25%;
+}
+.cards-container .card-title {
+  font-size: 150%;
+  text-align: center;
+  font-weight: bold;
+  color: #404040;
+  text-decoration: none;
+  padding: 10px 0px;
+}
+.cards-container .card-text {
+  text-align: center;
 }
 
 /* MEDIA QUERIES */
-/* Tablet */
 /* Mobile */
 @media only screen and (max-width: 576px) {
   /* esilos generales */
@@ -449,14 +444,21 @@ p {
     text-align: center;
     width: 100%;
   }
-  .article_container aside {
+  .article_container_main {
+    width: 100%;
+  }
+  .article_container_ph {
     width: 100%;
   }
   .article_historia {
     flex-direction: column-reverse;
     text-align: center;
+    width: 100%;
   }
-  .article_historia aside {
+  .article_historia .imagenes_h {
+    width: 100%;
+  }
+  .article_historia_content {
     width: 100%;
     text-align: center;
   }
@@ -465,69 +467,93 @@ p {
     width: 100%;
     align-items: center;
   }
-  .card {
+  .cards-container .card {
     width: 80%;
     margin: 20px 0px;
   }
-  .card-img-top {
+  .cards-container .card-img-top {
     height: 250px;
     object-fit: cover;
   }
   /* fotografia */
+  .fotografia__principal {
+    width: 100%;
+  }
   .fotografia__principal img {
     height: 225px;
+    width: 100%;
   }
   .cards__fotografia {
     display: flex;
     flex-direction: column;
+    width: 100%;
   }
-  .card__fotografia__body {
-    padding: 60px 40px 0px 40px;
+  .cards__fotografia .card__fotografia__body {
+    padding: 60px 40px 30px 40px;
     width: 100%;
   }
   /* calcosyvinilos */
+  .cyv__principal {
+    width: 100%;
+  }
   .cyv__principal img {
     height: 225px;
+    width: 100%;
   }
   .cyv__calco {
     flex-direction: column;
+    width: 100%;
   }
-  .cyv__product__calco {
+  .cyv__calco .cyv__product__calco {
     width: 100%;
     text-align: center;
   }
-  .calco_img {
+  .cyv__calco .calco_img {
     width: 100%;
   }
-  .calco_img img {
+  .cyv__calco .calco_img img {
     width: 100%;
     object-fit: cover;
     height: 370px;
   }
   .cyv__vinilo {
     flex-direction: column-reverse;
-  }
-  .cyv__product__vinilo {
-    width: 100%;
-    text-align: center;
-  }
-  .vinilo_img {
     width: 100%;
   }
-  .vinilo_img img {
+  .cyv__vinilo .vinilo_img {
+    width: 100%;
+  }
+  .cyv__vinilo .vinilo_img img {
     width: 100%;
     object-fit: cover;
     height: 370px;
   }
+  .cyv__vinilo .cyv__product__vinilo {
+    width: 100%;
+    text-align: center;
+  }
   /* impresión */
+  .imp__principal {
+    width: 100%;
+  }
   .imp__principal img {
     height: 225px;
-  }
-  .card__imp__body {
     width: 100%;
   }
-  .card__imp2__body {
+  .cards__imp {
     width: 100%;
+  }
+  .cards__imp .card__imp__body {
+    width: 100%;
+  }
+  .cards__imp2 {
+    width: 100%;
+  }
+  .cards__imp2 .card__imp2__body {
+    width: 100%;
+  }
+  .cards__imp2 .card__imp2__body img {
+    width: 70%;
   }
   /* contacto */
   .Campo {
