--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -54,7 +54,7 @@
       h2 {
         font-size: 200%;
         font-weight: bold;
-        text-align: start;
+        text-align: center;
       }
     }
   }
