--- a/scss/layout/_calcosyvinilos.scss
+++ b/scss/layout/_calcosyvinilos.scss
@@ -3,31 +3,26 @@
   /* MAIN_CALCOSYVINILOS */
 
   .cyv__principal {
-    background-color: #ffffff;
-    width: 100%;
+    @include pages_principal;
 
     img {
-      width: 100%;
-      height: 400px;
-      object-fit: cover;
+      @include pages_principal_img;
     }
     .cyv__content {
       padding: 50px;
-      width: 100%;
+      width: $ancho_total;
       vertical-align: top;
       text-align: center;
     
       h1 {
-        margin-bottom: 50px;
-        font-size: 400%;
-        font-weight: bold;
+        @include pages_principal_h1;
       }
     }
   }
 
   .cyv__calco {
     display: flex;
-    width: 100%;
+    width: $ancho_total;
   
     .cyv__product__calco {
       width: 50%;
@@ -44,7 +39,7 @@
       padding: 50px;
 
       img {
-        width: 100%;
+        width: $ancho_total;
         object-fit: cover;
         height: 370px;
       }
@@ -53,14 +48,14 @@
 
   .cyv__vinilo {
     display: flex;
-    width: 100%;
+    width: $ancho_total;
   
     .vinilo_img {
       width: 50%;
       padding: 50px;
     
       img {
-        width: 100%;
+        width: $ancho_total;
         object-fit: cover;
         height: 300px;
       }
