--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -3,13 +3,13 @@
   /* MAIN_CONTACTO */
 
   .contacto__principal {
-    width: 100%;
+    width: $ancho_total;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
   
     h1 {
-      width: 100%;
+      width: $ancho_total;
       font-size: 350%;
       font-weight: bold;
       text-align: center;
@@ -17,7 +17,7 @@
     }
     &__content {
       padding: 65px;
-      width: 100%;
+      width: $ancho_total;
       text-align: center;
     }
     h2 {
@@ -26,24 +26,25 @@
     }
     .container_form {
       display: flex;
-      width: 100%;
+      width: 90%;
+      justify-content: center;
     
       .row {
         justify-content: center;
-        width: 100%;
+        width: $ancho_total;
       
         .col-12 {
-          width: 80%;
+          width: $ancho_total;
         
           .form-label {
             padding-top: 20px;
           }
         }
         .col-6 {
-          width: 40%;
+          width: 50%;
         }
         .col-3 {
-          width: 20%;
+          width: 25%;
         }
         .form-check {
           padding-top: 20px;
@@ -59,13 +60,13 @@
 
   .contacto__sucursal {
     background-color: #ffffff;
-    width: 100%;
+    width: $ancho_total;
     display: flex;
     flex-direction: column;
 
     &__content {
       padding: 50px;
-      width: 100%;
+      width: $ancho_total;
       text-align: center;
     
       h4 {
@@ -76,7 +77,7 @@
     }
   
     iframe {
-      width: 100%;
+      width: $ancho_total;
       height: 350px;
       padding: 0px 50px 100px 50px;
     }
