--- a/scss/layout/_fotografia.scss
+++ b/scss/layout/_fotografia.scss
@@ -3,26 +3,20 @@
   /* MAIN_FOTOGRAFIA */
 
   .fotografia__principal {
-    background-color: #ffffff;
-    width: 100%;
-    display: inline-block;
+    @include pages_principal;
 
     img {
-      width: 100%;
-      height: 400px;
-      object-fit: cover;
+      @include pages_principal_img;
     }
 
     .fotografia__content {
       padding: 60px 50px 0px 50px;
-      width: 100%;
+      width: $ancho_total;
       vertical-align: top;
       text-align: center;
     
       h1 {
-        margin-bottom: 50px;
-        font-size: 400%;
-        font-weight: bold;
+        @include pages_principal_h1;
       }
     }
   }
@@ -44,9 +38,7 @@
       }
 
       img {
-        width: 100%;
-        height: 400px;
-        object-fit: cover;
+        @include pages_principal_img;
         padding-top: 20px;
       }
     }
