--- a/scss/layout/_impresion.scss
+++ b/scss/layout/_impresion.scss
@@ -3,24 +3,19 @@
   /* MAIN_IMPRESION */
 
   .imp__principal {
-    background-color: #ffffff;
-    width: 100%;
+    @include pages_principal;
   
     img {
-      width: 100%;
-      height: 400px;
-      object-fit: cover;
+      @include pages_principal_img;
     }
     .imp__content {
       padding: 50px;
-      width: 100%;
+      width: $ancho_total;
       vertical-align: top;
       text-align: center;
     
       h1 {
-        margin-bottom: 50px;
-        font-size: 400%;
-        font-weight: bold;
+        @include pages_principal_h1;
       }
     }
   }
@@ -31,9 +26,7 @@
     padding: 30px 0px;
   
     .card__imp__body {
-      padding: 30px 60px;
-      width: 50%;
-      text-align: center;
+      @include cards_imp_body (30px 60px, 50%, center);
 
       h4 {
         font-size: 250%;
@@ -58,7 +51,7 @@
     justify-content: space-around;
   
     .card__imp2__title {
-      width: 100%;
+      width: $ancho_total;
     
       h3 {
         margin-top: 100px;
@@ -67,12 +60,10 @@
       }
     }
     .card__imp2__body {
-      padding: 60px 30px;
-      width: 27%;
-      text-align: center;
+      @include cards_imp_body (60px 30px, 27%, center);
     
       img {
-        width: 100%;
+        width: $ancho_total;
         object-fit: cover;
       }
 
