--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -79,6 +79,11 @@
 
     .card {
       width: 25%;
+      transition: 0.3s;
+
+      &:hover {
+        transform: scale(110%)
+      }
 
       &-title {
         font-size: 150%;
