--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ footer {
   justify-content: center;
   background-color: #404040;
   padding: 60px;
+  align-items: center;
 }
 footer ul {
   list-style-type: none;
@@ -33,10 +34,21 @@ footer ul li a {
   color: #909090;
   text-decoration: none;
 }
+footer ul li a .bi-whatsapp {
+  font-size: 150%;
+}
+footer ul li a .bi-instagram {
+  font-size: 150%;
+}
+footer ul li a .bi-facebook {
+  font-size: 150%;
+}
 footer p {
   color: #757575;
   text-align: right;
   text-decoration: none;
+  margin: 0px;
+  font-size: 120%;
 }
 
 /* MENÚ_NAV */
@@ -191,6 +203,9 @@ header {
   background-color: #6D3E8C;
   border: none;
 }
+.contacto__principal .container_form .row .btn-primary:hover {
+  background-color: #3e0d5f;
+}
 
 .contacto__sucursal {
   background-color: #ffffff;
@@ -324,6 +339,10 @@ header {
   padding: 60px 30px;
   width: 27%;
   text-align: center;
+  transition: 0.3s;
+}
+.cards__imp2 .card__imp2__body:hover {
+  transform: scale(120%);
 }
 .cards__imp2 .card__imp2__body img {
   width: 100%;
@@ -408,6 +427,10 @@ header {
 }
 .cards-container .card {
   width: 25%;
+  transition: 0.3s;
+}
+.cards-container .card:hover {
+  transform: scale(110%);
 }
 .cards-container .card-title {
   font-size: 150%;
