--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -4,6 +4,7 @@ footer {
     justify-content: center;
     background-color: #404040;
     padding: 60px; 
+    align-items: center;
   
       ul {
       list-style-type: none;
@@ -20,6 +21,16 @@ footer {
               a {
               color: #909090;
               text-decoration: none;
+                
+                .bi-whatsapp {
+                    font-size: $size_icons;
+                }
+                .bi-instagram {
+                    font-size: $size_icons;
+                }
+                .bi-facebook {
+                    font-size: $size_icons;
+                }
               }
           }
       }
@@ -28,5 +39,7 @@ footer {
       color: #757575;
       text-align: right;
       text-decoration: none;
+      margin: 0px;
+      font-size: 120%;
       }
   }
