--- a/scss/layout/_impresion.scss
+++ b/scss/layout/_impresion.scss
@@ -49,6 +49,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    
   
     .card__imp2__title {
       width: $ancho_total;
@@ -61,6 +62,11 @@
     }
     .card__imp2__body {
       @include cards_imp_body (60px 30px, 27%, center);
+            transition: 0.3s;
+
+      &:hover {
+        transform: scale(120%)
+      }
     
       img {
         width: $ancho_total;
