--- a/scss/layout/_fotografia.scss
+++ b/scss/layout/_fotografia.scss
@@ -2,6 +2,10 @@
 
   /* MAIN_FOTOGRAFIA */
 
+  main {
+    overflow: $overflow;
+  }
+
   .fotografia__principal {
     @include pages_principal;
 
