--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,7 +1,11 @@
 /* INDEX.HTML */
 
   /* MAIN_INDEX */
-
+  
+  main {
+    overflow: $overflow;
+  }
+  
   .article_container {
     display: flex;
     width: $ancho_total;
