--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -27,6 +27,10 @@
     
       &_main {
         width: $ancho_total;
+        
+        h1 {
+          width: $ancho_total;
+        }
       }
       &_ph {
         width: $ancho_total;
