--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ footer ul li a .bi-facebook {
 }
 footer p {
   color: #757575;
-  text-align: right;
+  text-align: center;
   text-decoration: none;
   margin: 0px;
 }
