--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -37,7 +37,7 @@ footer {
       
       p {
       color: #757575;
-      text-align: right;
+      text-align: center;
       text-decoration: none;
       margin: 0px;
       }
